--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.2.2",
+    "@nuxtjs/supabase": "^0.3.1",
     "@types/node": "^18.14.0",
     "@videojs-player/vue": "^1.0.0",
     "nuxt": "^3.2.2",
     "video.js": "^8.0.4"
   },
   "dependencies": {
+    "@nuxt/ui": "^0.4.1",
     "@picocss/pico": "^1.5.7",
     "@supabase/supabase-js": "^2.8.0",
     "@testing-library/vue": "^6.6.1",
