--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.14.0",
     "@videojs-player/vue": "^1.0.0",
     "nuxt": "^3.2.2",
+    "supabase": "^1.38.7",
     "video.js": "^8.0.4"
   },
   "dependencies": {
