--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/supabase": "^0.3.1",
     "@types/node": "^18.14.0",
     "nuxt": "^3.2.2",
+    "sass": "^1.58.3",
     "supabase": "^1.38.7"
   },
   "dependencies": {
